Landing page imagery

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -41,3 +41,6 @@
         </div>
     </mat-menu>
 </mat-toolbar>
+
+<img class = "mx-auto" src = "../../../assets/landingpagetext.png">
+<img class = "mx-auto max-w-sm" src = "../../../assets/landingpagesymbols.png">
