--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,35 +7,35 @@
         </mat-icon>
     </button>
 
-    <mat-menu #menu="matMenu" class="">
-        <div class="p-3 divide-y divide-solid divider-color">
+    <mat-menu #menu="matMenu" class = "">
+        <div class="p-3 divide-y divide-solid divider-color dark-accent-bg ">
             <div class="pb-3 flex justify-between">
                 <span class="mr-16">3 item(s)</span>
                 <a routerLink="cart">View Cart</a>
             </div>
             <div class="py-3">
                 <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
+                    Pants
                     <span class="font-bold">{{ "150" | currency }} </span>
                 </div>
                 <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
+                    Skirt
                     <span class="font-bold">{{ "150" | currency }} </span>
                 </div>
                 <div class="flex justify-between font-light mb-2">
-                    Keyboard x 1
+                    Monkey
                     <span class="font-bold">{{ "150" | currency }} </span>
                 </div>
             </div>
-            <div class="flex justify-between pt-3 font-light">
+            <div class="flex justify-between pt-3 pb-3 font-light">
                 Total:
                 <span class="font-bold"> {{ "450" | currency }} </span>
             </div>
             <div class="pt-3 flex justify-between">
-                <button class="bg-red-600 text-white w-15 h-15 p-3">
+                <button class="bg-red-600 text-white w-15 h-15 rounded-md p-3">
                     Clear Cart
                 </button>
-                <button class="bg-green-600 text-white h-19 p-3">
+                <button class="bg-green-600 text-white h-19 rounded-md p-3">
                     Checkout
                 </button>
             </div>
