--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="flex justify-between">
           <span class="warning-color">{{ product.price.formatted | currency }} </span>
-          <button>
+          <button (click)="onAddToCart()">
               <mat-icon>shopping_cart</mat-icon>
           </button>
       </div>
