Basic spinner implementation for product area

--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -21,3 +21,5 @@
       </div>
   </div>
 </mat-card>
+
+<mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading$ | async"></mat-progress-spinner>
