--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -2,5 +2,6 @@
 <div class="flex justify-center">
   <div class="grid grid-cols-2 gap-4 product-area pb-3">
       <app-product-card *ngFor="let product of productArray" [product] = "product"></app-product-card>
+      <mat-progress-spinner class = "test" [mode]="'indeterminate'" *ngIf="loading$ | async"></mat-progress-spinner>
   </div>
 </div>
