Cart now can be added to/cleared

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <a routerLink="home"> Test </a>
     <img class="small-txt-img" src="../../../assets/bellabeesnametag.png" />
     <button mat-icon-button [matMenuTriggerFor]="menu">
-        <mat-icon [matBadge]="3" matBadgeColor="primary">
+        <mat-icon [matBadge]="this.cartItems.length || null" matBadgeColor="primary">
             shopping_cart
         </mat-icon>
     </button>
@@ -10,7 +10,7 @@
     <mat-menu #menu="matMenu" class = "">
         <div class="p-3 divide-y divide-solid divider-color dark-accent-bg ">
             <div class="pb-3 flex justify-between">
-                <span class="mr-16">3 item(s)</span>
+                <span class="mr-16">{{this.cartItems.length}} item(s)</span>
                 <a routerLink="cart">View Cart</a>
             </div>
             <div class="py-3">
@@ -29,10 +29,10 @@
             </div>
             <div class="flex justify-between pt-3 pb-3 font-light">
                 Total:
-                <span class="font-bold"> {{ "450" | currency }} </span>
+                <span class="font-bold"> {{ this.totalValue }} </span>
             </div>
             <div class="pt-3 flex justify-between">
-                <button class="bg-red-600 text-white w-15 h-15 rounded-md p-3">
+                <button (click)="onClearCart()" class="bg-red-600 text-white w-15 h-15 rounded-md p-3">
                     Clear Cart
                 </button>
                 <button class="bg-green-600 text-white h-19 rounded-md p-3">
