--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,20 @@
+<div class="wrapper">
 <h1 class="product-title p-10">From My Closet To Yours</h1>
-<div class="flex justify-center">
-  <div class="grid grid-cols-2 gap-4 product-area pb-3">
-      <app-product-card *ngFor="let product of productArray" [product] = "product"></app-product-card>
-      <mat-progress-spinner class = "test" [mode]="'indeterminate'" *ngIf="loading$ | async"></mat-progress-spinner>
+  <div class="overlay" *ngIf="loading$ | async">
+    <div class="spinner-wrapper">
+      <mat-progress-spinner
+        [mode]="'indeterminate'"
+        class="test"
+      ></mat-progress-spinner>
+    </div>
+  </div>
+
+  <div class="flex justify-center">
+    <div class="grid grid-cols-2 gap-4 product-area pb-3">
+      <app-product-card
+        *ngFor="let product of productArray"
+        [product]="product"
+      ></app-product-card>
+    </div>
   </div>
 </div>
