--- a/src/styles.css
+++ b/src/styles.css
@@ -84,7 +84,7 @@ body {
   position: fixed;
   z-index: 1002;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   top: 50%;
 }
 
@@ -92,4 +92,8 @@ body {
   display: flex;
   justify-content: center;
   justify-items: center;
+}
+
+.mat-tooltip {
+  font-size: 1rem !important;
 }
