--- a/src/styles.css
+++ b/src/styles.css
@@ -77,14 +77,16 @@ body {
 
 .wrapper {
   width: 100%;
-  height: 100%;
+}
+
+.noclick {
+  pointer-events: none;
 }
 
 .overlay {
   position: fixed;
   z-index: 1002;
   width: 100%;
-  height: 100vh;
   top: 50%;
 }
 
