Fixing tooltips on mobile

--- a/src/app/components/products/product-card/product-card.component.html
+++ b/src/app/components/products/product-card/product-card.component.html
@@ -16,8 +16,7 @@
       <div class="flex justify-between">
           <span class="warning-color">{{ product.price.formatted | currency }} </span>
           <button (click)="onAddToCart()"
-          matTooltip="Add To Cart"
-          touchGestures = "on">
+          matTooltip="Add To Cart">
               <mat-icon>shopping_cart</mat-icon>
           </button>
       </div>
