Changing file architecture to make adding new routes easier

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="mx-auto justify-between dark-accent-bg fixedBar">
-    <a routerLink="home"> Test </a>
+    <a routerLink="home"> Home </a>
     <img class="small-txt-img" src="../../../assets/bellabeesnametag.png" />
     <button [disabled] = "isLoading" mat-icon-button [matMenuTriggerFor]="menu">
         <mat-icon [matBadge]="this.cartItems.length || null" matBadgeColor="primary">
@@ -45,5 +45,3 @@
         src="../../../assets/landingpagesymbols.png"
     />
 </div>
-
-<app-products></app-products>
