--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<h1 class="product-title p-10">From My Closet To Yours</h1>
+<h1 class="product-title p-10">{{ messages.header }}</h1>
 
 <div class="flex justify-center">
   <div class="grid grid-cols-2 gap-4 product-area pb-3">
