--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,3 +1,14 @@
+<div class = "toolbarOffset">
+  <img
+      class="mx-auto large-txt-img"
+      src="../../../assets/landingpagetext.png"
+  />
+  <img
+      class="mx-auto max-w-sm"
+      src="../../../assets/landingpagesymbols.png"
+  />
+</div>
+
 <h1 class="product-title p-10">{{ messages.header }}</h1>
 
 <div class="flex justify-center">
