--- a/src/app/components/spinner/spinner.component.css
+++ b/src/app/components/spinner/spinner.component.css
@@ -7,18 +7,19 @@
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.7);
   z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .cssload-speeding-wheel {
   content: "";
   display: block;
   position: absolute;
-  left: 48%;
-  top: 40%;
-  width: 63px;
-  height: 63px;
+  width: 94.5px;
+  height: 94.5px;
   margin: 0 auto;
-  border: 4px solid rgb(0, 0, 0);
+  border: 6px solid #de1422;
   border-radius: 50%;
   border-left-color: transparent;
   border-right-color: transparent;
@@ -28,6 +29,15 @@
   -webkit-animation: cssload-spin 500ms infinite linear;
   -moz-animation: cssload-spin 500ms infinite linear;
 }
+
+@media screen and (max-width: 767px) {
+  .cssload-speeding-wheel {
+    width: 63px;
+    height: 63px;
+    border-width: 4px;
+  }
+}
+
 
 @keyframes cssload-spin {
   100% {
