--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,3 +1,4 @@
+<body class = "home">
 <div class = "toolbarOffset">
   <img
       class="mx-auto large-txt-img"
@@ -19,3 +20,4 @@
     ></app-product-card>
   </div>
 </div>
+</body>
