--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="flex justify-between pt-3 pb-3 font-light">
-                Total:
+                Subtotal:
                 <span class="font-bold"> {{ this.totalValue }} </span>
             </div>
             <div class="pt-3 flex justify-between">
