New build and fixing navbar

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,9 +1,21 @@
 .small-txt-img {
   max-height: 90%;
+  margin: 0 auto;
 }
 
 .fixedBar {
   position: fixed;
   height: 4rem;
   z-index: 100;
+}
+
+a {
+  text-decoration: none;
+}
+
+.flex {
+  display: flex;
+}
+.items-center {
+  align-items: center;
 }
